--- a/public/chat.html
+++ b/public/chat.html
@@ -13,19 +13,17 @@
 <body>
 
     <div class="chat">
-        <div class="chat__sidebar">
+        <div id="sidebar" class="chat__sidebar">
             <div class="add-new-user">
                 <form id="add-user-form">
                     <input type="email" placeholder="Email" id="add-user-email" required>
                     <button class="add-user-button">add user</button>
                 </form>
             </div>
-            <div class="users-list">
-
-            </div>
+        
 
         </div>
-        <div class="chat__main">
+        <div class="chat__main hidden">
             <div id="messages" class="chat__messages"></div>
             <div class="compose">
                 <form id='chat-form'>
@@ -41,10 +39,22 @@
 
     <script id="message-template" type="text/html">
         <div class="message">
-            <p>{{message}}</p>
+            <p>
+                <span class="message__name">{{username}}</span>
+                <span class="message__meta">{{createdAt}}</span>
+            </p>
+            <p>{{message_body}}</p>
         </div>
     </script>
-
+    
+    <script id="sidebar-template" type="text/html">
+            <h2>Friends</h2>
+            <ul class="users">
+                {{#friends}}
+                  <button id="{{_id}}">{{username}}</button>
+                {{/friends}}
+            </ul>
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
